--- a/simple_cache/config/sys.config
+++ b/simple_cache/config/sys.config
@@ -25,7 +25,7 @@
 
  {simple_cache, 
   [
-   {contact_nodes, ['contact_node@Macintosh-2']}
+   {contact_nodes, ['contact_node@martinjlogan-laptop']}
   ]
  }
 ]. 
