removed unnecesary call to create schema

--- a/simple_cache/config/sys.config
+++ b/simple_cache/config/sys.config
@@ -25,7 +25,7 @@
 
  {simple_cache, 
   [
-   {contact_nodes, ['contact_node@martinjlogan-laptop']}
+   {contact_nodes, ['a@192.168.1.105']}
   ]
  }
 ]. 
