some newer files salvaged from chapter 11

--- a/simple_cache/config/sys.config
+++ b/simple_cache/config/sys.config
@@ -10,7 +10,7 @@
 
 
 %% (G)eneric (A)pplication (S)services config below here. This default config provides
-%% the release with log rotation and trunctation.
+%% the release with log rotaion and trunctation.
  {gas,
   [
    {mod_specs, [{elwrap, {fs_elwrap_h, start_link}}]},
@@ -23,9 +23,18 @@
    {home_file_path, ".simple_cache.config"}
    ]},
 
+ %% Epkg provides package management on the local file system
+ {epkg, 
+  [
+	{low_erts_vsn, "5.5.5"},
+	{high_erts_vsn, "5.6.4"},
+	{preferred_erts_vsn, "5.6.3"},
+	{is_local_boot, false}
+  ]
+ },
+
  {simple_cache, 
   [
-   {contact_nodes, ['a@192.168.1.105']}
   ]
  }
 ]. 
